# realty-checker-project

./: .gitignore  README.md  main.py  models.dvc  pyproject.toml
.dvc/: config
data/processed/: move_ru_clean.parquet.dvc
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_model_with_feature.ipynb  04_model_with_embeddings.py  05_model_demo.ipynb
reports/: metrics_optuna.json
scripts/: build_dataset.py  build_text_embeddings.py  check_listing_example.py  collect_data.py  tune_catboost_optuna.py  upload_images_to_s3.py
src/bot/: bot.py
src/features/: build_features.py
src/schemas/: listings_schema.py
src/scrapers/: move_scraper.py
src/services/: price_checker.py
tests/: __init__.py
