[project]
name = "realty-checker-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.76",
    "dvc>=3.67.0",
    "pandera>=0.30.1",
    "pyarrow>=23.0.1",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
