[project]
name = "realty-checker-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.76",
    "catboost>=1.2.10",
    "dvc[s3]>=3.67.0",
    "fastapi>=0.136.1",
    "optuna>=4.8.0",
    "pandera>=0.30.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
    "webdriver-manager>=4.0.2",
]
